config/instances/manuela-argocd-aggregator/hub/prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
spec:
  host: prometheus-manuela-argocd-aggregator.apps.mgmt.fzdarsky.net
  port:
    targetPort: web
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  wildcardPolicy: None
